<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BatteryMonitor</string>
    <string name="activity_title_main">Battery Monitor</string>
    <string name="activity_title_setting">Battery Monitor Setting</string>
    <string name="activity_title_log">View Log</string>
    <string name="activity_title_about">About this app</string>
    <string name="btn_ok">OK</string>
    <string name="lbl_battery_level">Battery Status:</string>
    <string name="string_no_data">no data now</string>
    <string name="menu_curve">Curve</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_log">Log</string>
    <string name="menu_about">About</string>
    <string name="pref_service_enable">Enable Service</string>
    <string name="pref_sum_service_enabled">Service is enabled</string>
    <string name="pref_sum_service_disabled">Service is disabled</string>
    <string name="pref_list_size">List Size</string>
    <string name="pref_sum_list_size">Range: 50~500 Default: 200</string>
    <string name="pref_interval">Interval</string>
    <string name="pref_sum_interval">the time between two record</string>
    <string name="pref_axis_setting">Axis Setting</string>
    <string name="pref_axis_left_max">Max value of the left axis</string>
    <string name="pref_axis_left_min">Min value of the left axis</string>
    <string name="pref_axis_right_max">Max value of the right axis</string>
    <string name="pref_axis_right_min">Min value of the right axis</string>
    <string name="pref_sum_axis_left_max">Range: min+1 ~ 200 Default:100</string>
    <string name="pref_sum_axis_left_min">Range: -100 ~ max-1 Default:0</string>
    <string name="pref_sum_axis_right_max">Range: min+1 ~ 100 Default:10</string>
    <string name="pref_sum_axis_right_min">Range: -100 ~ max-1 Default:-10</string>
    <string name="pref_tts_setting">TTS(Text-to-Speech) Settings</string>
    <string name="pref_tts_enable">Enable TTS</string>
    <string name="pref_summaryon_tts_enable">TTS is enabled</string>
    <string name="pref_summaryoff_tts_enable">TTS is disabled</string>
    <string name="pref_tts_detail">TTS detail settings</string>
    <string name="pref_tts_silent_in_night">TTS silent in night</string>
    <string name="pref_summaryon_tts_silent_in_night">Keep silent when 10:00PM~7:00AM</string>
    <string name="pref_summaryoff_tts_silent_in_night">TTS always on</string>
    <string name="pref_tts_low_alarm">Alarm for low level</string>
    <string name="pref_summaryon_tts_low_alarm">when level=25, 23, 21, 19, 17</string>
    <string name="pref_summaryoff_tts_low_alarm">OFF</string>
    <string name="pref_tts_very_low_alarm">Alarm for very low level</string>
    <string name="pref_summaryon_tts_very_low_alarm">when level=15, 13, 11, 9, 7, 5, 3</string>
    <string name="pref_summaryoff_tts_very_low_alarm">OFF</string>
    <string name="pref_tts_charge_progress">Alarm for charging progress</string>
    <string name="pref_summaryon_tts_charge_progress">when charging and level=50, 60, 70, 80, 90, 95, 99, 100</string>
    <string name="pref_summaryoff_tts_charge_progress">OFF</string>
    <string name="pref_tts_used_progress">Alarm for used progress</string>
    <string name="pref_summaryon_tts_used_progress">when discharged and level=50, 40, 30</string>
    <string name="pref_summaryoff_tts_used_progress">OFF</string>
    <string name="pref_tts_power_state">Alarm for power state changed</string>
    <string name="str_current_battery_state" formatted="false">Level:%d%% Voltage:%.3fV Temp:%.1f°C Health:%s</string>
    <string name="str_battery_health_unknown">Unknow</string>
    <string name="str_battery_health_cold">Cold</string>
    <string name="str_battery_health_dead">Dead</string>
    <string name="str_battery_health_good">Good</string>
    <string name="str_battery_health_over_voltage">Over voltage</string>
    <string name="str_battery_health_error">Error</string>
    <string name="str_battery_health_over_heat">Over heat</string>
    <string name="str_curve_title">Battery Used Rate</string>
    <string name="str_no_enough_data_for_curve">Too few data to make curve</string>
    <string name="str_notification_content_title" formatted="false">Level: %02d%%</string>
    <string name="str_notification_content_text">Click for more detail</string>
    <string name="str_about_author">Author: </string>
    <string name="str_about_version">Version: </string>
    <string name="str_about_open_soure">This app is open source. Host in:</string>
    <string name="axis_x_time">Time</string>
    <string name="axis_y_left_level">Level(%)</string>
    <string name="axis_y_right_rate">Rate(%)</string>

</resources>
