<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference
      android:key="pref_service_enable"
      android:title="@string/pref_service_enable"
      android:defaultValue="true"
      android:summaryOn="@string/pref_sum_service_enabled"
      android:summaryOff="@string/pref_sum_service_disabled" />
  <EditTextPreference
      android:key="pref_list_size"
      android:title="@string/pref_list_size"
      android:summary="@string/pref_sum_list_size"
      android:defaultValue="200"
      android:inputType="number" />
  <ListPreference
      android:key="pref_interval"
      android:title="@string/pref_interval"
      android:summary="@string/pref_sum_interval"
      android:entries="@array/pref_interval_entries"
      android:entryValues="@array/pref_interval_values"
      android:defaultValue="20" />
  <PreferenceCategory 
      android:title="@string/pref_axis_setting"
      android:key="pref_axis_setting">
    <EditTextPreference
        android:key="pref_axis_left_max"
        android:title="@string/pref_axis_left_max"
        android:summary="@string/pref_sum_axis_left_max"
        android:defaultValue="100"
        android:inputType="number" />
    <EditTextPreference
        android:key="pref_axis_left_min"
        android:title="@string/pref_axis_left_min"
        android:summary="@string/pref_sum_axis_left_min"
        android:defaultValue="0"
        android:inputType="number" />
    <EditTextPreference
        android:key="pref_axis_right_max"
        android:title="@string/pref_axis_right_max"
        android:summary="@string/pref_sum_axis_right_max"
        android:defaultValue="10"
        android:inputType="number" />
    <EditTextPreference
        android:key="pref_axis_right_min"
        android:title="@string/pref_axis_right_min"
        android:summary="@string/pref_sum_axis_right_min"
        android:defaultValue="-10"
        android:inputType="number" />
  </PreferenceCategory>
  <PreferenceCategory 
      android:title="@string/pref_tts_setting"
      android:key="pref_tts_setting">
    <CheckBoxPreference
        android:key="pref_tts_enable"
        android:title="@string/pref_tts_enable"
        android:defaultValue="false" 
        android:summaryOn="@string/pref_summaryon_tts_enable"
        android:summaryOff="@string/pref_summaryoff_tts_enable" />
    <PreferenceScreen
        android:key="pref_tts_detail"
        android:title="@string/pref_tts_detail"
        android:persistent="false">
      <CheckBoxPreference
          android:key="pref_tts_silent_in_night"
          android:title="@string/pref_tts_silent_in_night"
          android:defaultValue="true" 
          android:summaryOn="@string/pref_summaryon_tts_silent_in_night"
          android:summaryOff="@string/pref_summaryoff_tts_silent_in_night" />
      <CheckBoxPreference
          android:key="pref_tts_low_alarm"
          android:title="@string/pref_tts_low_alarm"
          android:defaultValue="true" 
          android:summaryOn="@string/pref_summaryon_tts_low_alarm"
          android:summaryOff="@string/pref_summaryoff_tts_low_alarm" />
      <CheckBoxPreference
          android:key="pref_tts_very_low_alarm"
          android:title="@string/pref_tts_very_low_alarm"
          android:defaultValue="true" 
          android:summaryOn="@string/pref_summaryon_tts_very_low_alarm"
          android:summaryOff="@string/pref_summaryoff_tts_very_low_alarm" />
      <CheckBoxPreference
          android:key="pref_tts_charge_progress"
          android:title="@string/pref_tts_charge_progress"
          android:defaultValue="true" 
          android:summaryOn="@string/pref_summaryon_tts_charge_progress"
          android:summaryOff="@string/pref_summaryoff_tts_charge_progress" />
      <CheckBoxPreference
          android:key="pref_tts_used_progress"
          android:title="@string/pref_tts_used_progress"
          android:defaultValue="true" 
          android:summaryOn="@string/pref_summaryon_tts_used_progress"
          android:summaryOff="@string/pref_summaryoff_tts_used_progress" />
      <CheckBoxPreference
          android:key="pref_tts_power_state"
          android:title="@string/pref_tts_power_state"
          android:defaultValue="true" />
    </PreferenceScreen>
  </PreferenceCategory>
</PreferenceScreen>
